--- a/1/1.html
+++ b/1/1.html
@@ -2,20 +2,54 @@
 <html>
     <head>
         <title>台南一日遊網(交通)</title>
+        <style>
+        .font1{
+            font-style:normal;
+            font-weight:bold;
+            font-size:40px; 
+            font-family: "times new roman","標楷體";
+            color:navy
+        }
+        .font2{
+            font-style:normal;
+            font-weight:bold;
+            font-size:30px; 
+            font-family: "times new roman","標楷體";
+            color:black
+        }
+        .font3{
+            font-style:normal;
+            font-weight:bold;
+            font-size:20px; 
+            font-family: "times new roman","標楷體";
+            color:darkred
+        }
+        .font4{
+            font-style:normal;
+            font-weight:bold;
+            font-size:15px; 
+            font-family: "times new roman","標楷體";
+            color:black
+        }
+        </style>
     </head>
     <body>
-        <h1><b>台南一日遊網</b></h1>
-        <p><b>交通方式</b></p>
-        <ul>
-            <li>項目一</li>
-            <li>項目二</li>
-            <li>項目三</li>
-        </ul>
-        <ol>
-            <li>數字一</li>
-            <li>數字二</li>
-            <li>數字三</li>
+        <b><h1><p><p class='font1'>台南一日遊網</b></h1></p></p>
+        <h2><p><b><p class='font2'>交通方式 </b></p></h2></p>
+         <ol>
+                <h3><li><p class='font3'>景點1-景點2</li></h3></p>
+            <ul>
+                <h4><li><p class='font4'>推薦交通方式</li></h4></p>
+            </ul>
+            <h3><li><p class='font3'>景點3-景點4</li></h3></p>
+            <ul>
+                <h4><li><p class='font4'>推薦交通方式</li></h4></p>
+            </ul>
+            <h3><li><p class='font3'>景點5-景點6</li></h3></p>
+            <ul>
+                <h4><li><p class='font4'>推薦交通方式</li></h4></p>
+            </ul>
         </ol>
-        <p>段落段落</p>
+        <p>....</p>
     </body>
 </html>
